N/A: make a difference between user and member  - Change UserInterface  - Create Member Entity  - Create DiscussionMember Entity  - Mark discussion as seen or not  - Rewrite CreateDiscussion use-case & test  - Rewrite SendMessage use-case & test  - Install PHPStan

--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,12 @@
     }
   ],
   "require-dev": {
+    "phpstan/phpstan": "^2.0",
     "phpunit/phpunit": "^9.5"
   },
   "scripts": {
+    "phpstan": "vendor/bin/phpstan analyse src tests tests-integration --level 6",
+    "test": "phpunit",
     "tests": "phpunit"
   }
 }
