--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -25,13 +25,7 @@ jobs:
 
       - name: PHPUnit
         run: |
-          ./vendor/bin/phpunit --stop-on-failure --coverage-php=coverage.php
-        env:
-          XDEBUG_MODE: coverage
-
-      - name: Generate Coverage report
-        run: |
-          php CoverageGenerate.php >> Coverage.md
+          ./vendor/bin/phpunit --stop-on-failure --coverage-text=coverage.md
         env:
           XDEBUG_MODE: coverage
 
@@ -47,7 +41,7 @@ jobs:
 
       - name: Push
         run: |
-          mv Coverage.md wiki
+          mv coverage.md wiki
           mv 'Static Analysis.md' wiki
           cd wiki
           ls -la
