--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -28,6 +28,8 @@ jobs:
           ./vendor/bin/phpunit --stop-on-failure --coverage-text=coverage.md
         env:
           XDEBUG_MODE: coverage
+        with:
+          php_version: "8.3"
 
       - name: PHPStan Analysis
         run: |
