--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -5,7 +5,11 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.operating-system }}
+    strategy:
+      matrix:
+        operating-system: [ubuntu-latest]
+        php-versions: ['8.3']
 
     steps:
       - name: Checkout
@@ -28,8 +32,6 @@ jobs:
           ./vendor/bin/phpunit --stop-on-failure --coverage-text=coverage.md
         env:
           XDEBUG_MODE: coverage
-        with:
-          php_version: "8.3"
 
       - name: PHPStan Analysis
         run: |
