--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -5,12 +5,9 @@ permissions:
 
 jobs:
   build:
-    runs-on: ${{ matrix.operating-system }}
-    strategy:
-      matrix:
-        operating-system: [ubuntu-latest]
-        php-versions: ['8.3']
-
+    runs-on: ubuntu-latest
+    container:
+      image: php:8.3
     steps:
       - name: Checkout
         uses: actions/checkout@v4
