--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -6,8 +6,6 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: php:8.3
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,9 +29,10 @@ jobs:
           coverage_text: coverage.md
           args: '--stop-on-failure'
 
-      - name: PHPStan Analysis
-        run: |
-          ./vendor/bin/phpstan analyse --configuration=phpstan.neon --memory-limit=1024M --error-format=md --no-progress >> 'Static Analysis.md'
+      - name: PHPStan
+        uses: php-actions/phpstan@v3
+        with:
+          command: ./vendor/bin/phpstan analyse --configuration=phpstan.neon --memory-limit=1024M --error-format=md --no-progress >> 'Static Analysis.md'
 
       - name: Wiki checkout
         uses: actions/checkout@v4
