--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -32,7 +32,7 @@ jobs:
       - name: PHPStan
         uses: php-actions/phpstan@v3
         with:
-          args: '--error-format=md'
+          args: '--error-format=github'
 
       - name: Wiki checkout
         uses: actions/checkout@v4
