--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: PHPStan
         uses: php-actions/phpstan@v3
+        with:
+          path: 'tests tests-integration'
+          args: '--error-format=github'
 
       - name: Wiki checkout
         uses: actions/checkout@v4
@@ -41,6 +44,7 @@ jobs:
       - name: Push
         run: |
           mv coverage.md wiki
+          mv output.log wiki/'Static Analysis.md'
           cd wiki
           ls -la
           git config user.name actions-runner
