--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -1,16 +1,11 @@
 name: PHPStan Analysis and PHPUnit Coverage Report
-on:
-  push:
-    branches: [ "master" ]
-    paths:
-      - '.github/reporting.yml'
-      - '**.php'
+on: [pull_request]
 permissions:
   contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,33 +19,20 @@ jobs:
       - name: Composer Init
         uses: php-actions/composer@v6
         with:
-          php_version: "8.2"
+          php_version: "8.3"
           php_extensions: soap intl gd
 
-      - name: Generate Coverage report
-        run: |
-          php CoverageGenerate.php >> Coverage.md
+      - name: PHPUnit
+        uses: php-actions/phpunit@v4
+        with:
+          php_version: "8.3"
+          coverage_text: coverage.md
+          args: '--stop-on-failure'
         env:
           XDEBUG_MODE: coverage
 
-      - name: PHPStan Analysis
-        run: |
-          ./vendor/bin/phpstan analyse --configuration=phpstan.neon --memory-limit=2048M --error-format=md --no-progress >> 'Static Analysis.md'
-
-      - name: Wiki checkout
-        uses: actions/checkout@v4
+      - name: PHPStan
+        uses: php-actions/phpstan@v3
         with:
-          repository: ${{github.repository}}.wiki
-          path: 'wiki'
-
-      - name: Push
-        run: |
-          mv Coverage.md wiki
-          mv 'Static Analysis.md' wiki
-          cd wiki
-          ls -la
-          git config user.name actions-runner
-          git config user.email actions-runner@github.com
-          git add .
-          git commit -m "Add Coverage and Analysis files" 
-          git push
+          path: 'tests tests-integration'
+          args: '--error-format=github'
